--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body{
 h1{
   text-shadow:2px 2px#F06292;
   font-size:20px;
+  font-family: 'New Tegomin', serif;
 }
 p{
   font-size:18px;
@@ -20,28 +21,36 @@ img{
   border-radius:50%;
   width:100px;
 }
-.menu {
-    list-style: none;
-    font-family: cursive;
-    float:right;
-    top:10px;
-    right:30px;
-    z-index: 10;
-    cursor: pointer;
+.menu{
+  list-stylea:none;
+  font-family:sans-serif;
+  position:absolute;
+  top:10px;
+  right:30px;
+  z-index:10;
+  cursor:pointer;
 }
-#name{
-    font-family: "courgette",cursive;
+.menu{
+  list-style:none;
+  font-family:sans-serif;
+  z-index:10;
+  cursor:pointer;
+  color:purple;
 }
 .links{
-    float: left;
-    color: darkslategrey;
-    padding-top: 5px;
-    padding-left: 9px;
-    padding-right: 9px;
-    padding-bottom: 5px;
-    font-family: fantasy;
-    font-size: 20px
+  float:left;
+  padding-top:5px;
+  padding-left:9px;
+  padding-right:9px;
+  padding-bottom:5px;
+  font-size:20px;
 }
 .links :hover{
-    background-color: dodgerblue;
+  background-color:blue;
+}
+a{
+  text-decoration:none;
+}
+.article:hover{
+  color:#42A5F5;
 }
