--- a/style.css
+++ b/style.css
@@ -18,11 +18,11 @@ p{
   text-align:center;
 }
 img{
-  border-radius:50%;
-  width:100px;
+  width:500px;
+  height:600px;
 }
 .menu{
-  list-stylea:none;
+  list-style:none;
   font-family:sans-serif;
   position:absolute;
   top:10px;
@@ -51,6 +51,37 @@ img{
 a{
   text-decoration:none;
 }
-.article:hover{
+.links{
+    display:inline;
+    padding-left:33px;
+    padding-left:25px;
+    font-family:fantasy;
+    font-size:20px;
+}
+article:hover{
   color:#42A5F5;
+}
+.menu{
+    position:fixed;
+    background: white;
+    width:100%;
+    margin-top:0px;
+    top:0px;
+    z-index:0;
+}
+.links :hover{
+    font-size:25px;
+    text-decoration:underline;
+}
+.contact_1 a{
+    color:white;
+    text-shadow:none;
+}
+contact_1 h3{
+    display:inline;
+}
+#Writings a{
+ text-shadow:none !important;
+    text-decoration: underline !important;
+    color: blue !important;
 }
